--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "require": {},
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Http\\": "http/"
         }
     }
 }
